# hot-wheels-collector

./: .example.env  .pre-commit-config.yaml  README.md  alembic.ini  justfile  pyproject.toml
hot_wheels_collector/: api.py  deps.py  errors.py  helpers.py
hot_wheels_collector/database/: engine.py  models.py  repository.py  schemas.py
hot_wheels_collector/models/: api.py  base.py  models.py  series.py
hot_wheels_collector/scrapers/: base.py  config.yaml  hot_wheels_models.py  run.py
hot_wheels_collector/settings/: base.py  database.py  logger.py  scrapers.py
migrations/: env.py
migrations/versions/: 443959e98cc6_add_users_models_model_users_and_series_.py  66ab227718ad_add_users_models_model_users_and_series_.py  7c41bf5f8596_add_users_models_modelusers_and_series_.py
tests/: conftest.py  mocks.py  test_api.py  test_db.py
